# Fast_API_from_zero

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_api_from_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_api_from_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 06e36d0c55e3_create_users_table.py  16a1216a2e7a_adding_updated_at.py  1a102ad8e20f_create_users_table.py  40e4b7803405_adjusting_updated_at.py  75dfd547b285_create_users_table.py  8458331b8b22_adding_created_at_and_updated_at.py  f1490680a4a1_creating_todos_table.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
